fixed marin-bottom on mobile

--- a/src/component/auth/auth.css
+++ b/src/component/auth/auth.css
@@ -239,6 +239,10 @@ label {
   }
 }
 @media screen and (max-width: 400px) {
+  .form-section {
+    width: 85%;
+    margin-top: 0px;
+  }
   .name-section {
     display: flex;
     flex-direction: column;
